--- a/ComposeDemo/build.gradle
+++ b/ComposeDemo/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.example.composedemo'
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.composedemo"
         minSdk 24
-        targetSdk 31
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -47,14 +47,16 @@ android {
 }
 
 dependencies {
-
+    //ViewModel
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
+    // Navigation
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0-rc01"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.2.0'
-    implementation 'androidx.core:core-ktx:+'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
