CompLocalDemo - 프로젝트 생성

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "JetpackCompose"
 include ':ComposeDemo'
 include ':stateexample'
+include ':CompLocalDemo'
