SlotApiDemo - 프로젝트 생성

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,5 +14,6 @@ dependencyResolutionManagement {
 }
 rootProject.name = "JetpackCompose"
 include ':ComposeDemo'
-include ':stateexample'
+include ':StateExample'
 include ':CompLocalDemo'
+include ':SlotApiDemo'
